--- a/Ventas.html
+++ b/Ventas.html
@@ -1,77 +1,113 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./estilos.css">
   <link rel="stylesheet" href="./menu.css">
-  <title>De Vuelta a casa</title>
+  <link rel="stylesheet" href="./Ventas.css">
+ 
+  <title>De Vuelta a Casa</title>
 </head>
-
 <body>
   <!-- Header -->
-  <section class="top-nav">
-    <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">   
-    <input id="menu-toggle" type="checkbox" />
-    <label class='menu-button-container' for="menu-toggle">
-      <div class='menu-button'></div>
-    </label>
-    <ul class="menu">
-      <li><a href="index.html">Inicio!</a></li>
-      <li><a href="Adopcion.html">Adopcion!</a></li>
-      <li><a href="Donaciones.html">Donaciones!</a></li>
-      <li><a href="Ventas.html">Ventas!</a></li>
-      <li><a href="Contacto.html">Contacto!</a></li>
-    </ul>
-  </section>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <header>
+    <section class="top-nav">
+      <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="Adopcion.html">Adopción</a></li>
+        <li><a href="Donaciones.html">Donaciones</a></li>
+        <li><a href="Ventas.html">Ventas</a></li>
+        <li><a href="Contacto.html">Contacto</a></li>
+      </ul>
+    </section>
+  </header>
   <!-- End Header -->
 
   <!-- Projects Section -->
   <section id="projects">
     <div class="all-projects sales">
-      <div class="project-item store">
-        <div class="project-info food">
+      <div class="project-item">
+        <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta" />
+            <img src="Assets/galleta1.jpg" alt="galleta">
             <h2>GALLETAS ARTESANALES PARA PERROS</h2>
             <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
-      <div class="project-item store">
-        <div class="project-info food">
+      <div class="project-item">
+        <div class="project-info">
           <div class="project-img">
-            <img src="Assets/juguetes.avif" alt="juguetes" />
-            <h2>JUGUETES PARA GATOS Y PERROS</h2>
-            <h2>$200</h2>
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
-      <div class="project-item store">
-        <div class="project-info food">
+      <div class="project-item">
+        <div class="project-info">
           <div class="project-img">
-            <img src="Assets/peluche personalisado de mascota.jpg" alt="peluche" />
-            <h2>PELUCHE PERSONALIZADO DE TU MASCOTA</h2>
-            <h2>$500</h2>
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
-      <div class="project-item store">
-        <div class="project-info food">
+      <div class="project-item">
+        <div class="project-info">
           <div class="project-img">
-            <img src="Assets/collares de colores.jpg" alt="collares" />
-            <h2>COLLAR DE COLORES PARA MASCOTA</h2>
-            <h2>$300</h2>
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/galleta1.jpg" alt="galleta">
+            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
+            <h2>$150</h2>
+            <button class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <!-- Agregar más elementos de tienda aquí -->
     </div>
   </section>
-</body>
+  <!-- End Projects Section -->
 
+  <!-- Scripts -->
+  <script src="app.js"></script>
+</body>
 </html>
