--- a/Contactos.html
+++ b/Contactos.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Formulario de Contacto</title>
   <link rel="stylesheet" type="text/css" href="EstilosCON.css">
 </head>
+
 <body>
   <h1>Formulario de Contacto</h1>
-  <form id="contact-form" method="post" action="submit-form.php">
+  <form id="contact-form">
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name" required>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
-    <label for="message">Mensaje:</label>
-    <textarea id="message" name="message" required></textarea>
+    <label for="comment">Comentario:</label>
+    <textarea id="comment" name="comment" required></textarea>
     <input type="submit" value="Enviar">
   </form>
 </body>
+
 </html>
