--- a/Adopcion.html
+++ b/Adopcion.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="./estilos.css">
     <link rel="stylesheet" href="./menu.css">
     <link rel="stylesheet" href="./Carousel.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
     <title>De Vuelta a casa</title>
 </head>
 
 <body>
     <!-- Header -->
     <section class="top-nav">
-        <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">   
+        <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="50" height="30" alt="img">   
         <input id="menu-toggle" type="checkbox" />
         <label class='menu-button-container' for="menu-toggle">
             <div class='menu-button'></div>
@@ -62,19 +65,19 @@
   <!-- Diapositivas -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img1.jpg" alt="Image 1">
+      <img src="file:///C:/Users/Grupo%20Mind/Downloads/OIG%20(1).jfif" alt="Image 1">
       <div class="carousel-caption">
         <h3>Image 1</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img2.jpg" alt="Image 2">
+      <img src="https://th.bing.com/th/id/OIG.jItxIQawtrK5oTXYjTjC?pid=ImgGn" alt="Image 2">
       <div class="carousel-caption">
         <h3>Image 2</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img3.jpg" alt="Image 3">
+      <img src="https://th.bing.com/th/id/OIG.i823oeO29h2Ghz9Z3Ivf?pid=ImgGn" alt="Image 3">
       <div class="carousel-caption">
         <h3>Image 3</h3>
       </div>
