cambios en ventas

--- a/Ventas.html
+++ b/Ventas.html
@@ -35,7 +35,7 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
+            <img src="Assets/galleta1.jpg" width="100px" height="100px" alt="galleta">
             <h2>GALLETAS ARTESANALES PARA PERROS</h2>
             <h2>$150</h2>
             <button class="buy-button">Comprar</button>
@@ -45,9 +45,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/juguetes.jpg" width="60px" height="50px" alt="juguetes">
+            <h2>JUGUETES PARA PERROS Y GATOS</h2>
+            <h2>$200</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
@@ -55,9 +55,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/peluche personalizado de tu mascota.jpg" width="60px" height="100px" alt="peluche">
+            <h2>PELUCHE PERSONALIZADO DE TU MASCOTA</h2>
+            <h2>$500</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
@@ -65,9 +65,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/collares de colores.jpg" width="60px" height="100px" alt="collares de colores">
+            <h2>COLLAR DE COLORES PARA MASCOTA</h2>
+            <h2>$300</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
@@ -75,9 +75,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/collar cafe para mascota.jpg" width="70px" height="50px" alt="collares cafes">
+            <h2>COLLAR CAFE PARA MASCOTAS</h2>
+            <h2>$300</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
@@ -85,9 +85,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/sueter azul.jpg" width="70px" height="50px" alt="sueter azul">
+            <h2>SUETER PARA MASCOTAS COLOR AZUL</h2>
+            <h2>$400</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
@@ -95,9 +95,9 @@
       <div class="project-item">
         <div class="project-info">
           <div class="project-img">
-            <img src="Assets/galleta1.jpg" alt="galleta">
-            <h2>GALLETAS ARTESANALES PARA PERROS</h2>
-            <h2>$150</h2>
+            <img src="Assets/plato para comer lento espiral.jpg" width="70px" height="50px" alt="plato para comer lento espiral">
+            <h2>PLATO PATA COMER LENTO (ESPIRAL)</h2>
+            <h2>$200</h2>
             <button class="buy-button">Comprar</button>
           </div>
         </div>
