--- a/Donaciones.html
+++ b/Donaciones.html
@@ -26,7 +26,8 @@
         <li><a href="Adopcion.html">Adopción</a></li>
         <li><a href="Donaciones.html">Donaciones</a></li>
         <li><a href="Ventas.html">Ventas</a></li>
-        <li><a href="Contacto.html">Contacto</a></li>
+        <li><a href="Contactos.html">Contacto</a></li>
+        <li><a href="...">Mapa</a></li>
       </ul>
     </section>
   </header>
@@ -60,5 +61,9 @@
     <!-- Aquí puedes agregar contenido para el footer -->
   </footer>
 </body>
-
+<footer>
+  <p>&copy;Supervisor del curso: Raul Galvan</p>
+  <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
+  <p>Bakend: Damariz, Andrea y Marcia</p>
+</footer>
 </html>
