--- a/Adopcion.html
+++ b/Adopcion.html
@@ -25,7 +25,8 @@
             <li><a href="Adopcion.html">Adopcion!</a></li>
             <li><a href="Donaciones.html">Donaciones!</a></li>
             <li><a href="Ventas.html">Ventas!</a></li>
-            <li><a href="Contacto.html">Contacto!</a></li>
+            <li><a href="Contactos.html">Contacto!</a></li>
+            <li><a href="...">Mapa</a></li>
           </ul>    
     </section>
     <br>
@@ -98,4 +99,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
+<footer>
+  <p>&copy;Supervisor del curso: Raul Galvan</p>
+  <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
+  <p>Bakend: Damariz, Andrea y Marcia</p>
+</footer>
 </html>
