--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       <li><a href="Adopcion.html">Adopción</a></li>
       <li><a href="Donaciones.html">Donaciones</a></li>
       <li><a href="Ventas.html">Ventas</a></li>
-      <li><a href="Contacto.html">Contacto</a></li>
+      <li><a href="Contactos.html">Contacto</a></li>
+      <li><a href="...">Mapa</a></li>
     </ul>
   </section>
   <br>
@@ -194,7 +195,7 @@
 <footer>
   <p>&copy;Supervisor del curso: Raul Galvan</p>
   <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
-  <p>Bakend: Andrea y Marcia</p>
+  <p>Bakend: Damariz, Andrea y Marcia</p>
 </footer>
 
 </html>
