Se agrego la seccion de Mapa, se agrego la funcion en navegacion de mapa, se empezo a modifiicar y editar la seccion de mapa (Aun no esta listo para hacerlo funcionar)

--- a/Contactos.html
+++ b/Contactos.html
@@ -24,7 +24,7 @@
       <li><a href="Donaciones.html">Donaciones</a></li>
       <li><a href="Ventas.html">Ventas</a></li>
       <li><a href="Contactos.html">Contacto</a></li>
-      <li><a href="...">Mapa</a></li>
+      <li><a href="Mapa.html">Mapa</a></li>
     </ul>
   </section>
 </body>
