--- a/Adopcion.html
+++ b/Adopcion.html
@@ -65,7 +65,7 @@
   <!-- Diapositivas -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="file:///C:/Users/Grupo%20Mind/Downloads/OIG%20(1).jfif" alt="Image 1">
+      <img src="https://th.bing.com/th/id/OIG.wu_ejjIETbhLDcZ82Jke?pid=ImgGn" alt="Image 1">
       <div class="carousel-caption">
         <h3>Image 1</h3>
       </div>
