--- a/Adopcion.html
+++ b/Adopcion.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
 <script>
   function redireccionar() {
-      window.location.href = "Contacto.html";
+      window.location.href = "Contactos.html";
   }
 </script>
 </head>
@@ -30,7 +30,7 @@
             <li><a href="Adopcion.html">Adopcion!</a></li>
             <li><a href="Donaciones.html">Donaciones!</a></li>
             <li><a href="Ventas.html">Ventas!</a></li>
-            <li><a href="Contacto.html">Contacto!</a></li>
+            <li><a href="Contactos.html">Contacto!</a></li>
           </ul>    
     </section>
     <br>
