--- a/Adopcion.html
+++ b/Adopcion.html
@@ -30,7 +30,7 @@
             <li><a href="Adopcion.html">Adopcion!</a></li>
             <li><a href="Donaciones.html">Donaciones!</a></li>
             <li><a href="Ventas.html">Ventas!</a></li>
-            <li><a href="Contactos.html">Contacto!</a></li>
+            <li><a href="Contacto.html">Contacto!</a></li>
             <li><a href="...">Mapa</a></li>
           </ul>    
     </section>
