--- a/Donaciones.html
+++ b/Donaciones.html
@@ -26,7 +26,7 @@
         <li><a href="Adopcion.html">Adopción</a></li>
         <li><a href="Donaciones.html">Donaciones</a></li>
         <li><a href="Ventas.html">Ventas</a></li>
-        <li><a href="Contactos.html">Contacto</a></li>
+        <li><a href="Contacto.html">Contacto</a></li>
       </ul>
     </section>
   </header>
