--- a/Ventas.html
+++ b/Ventas.html
@@ -23,7 +23,7 @@
         <li><a href="Adopcion.html">Adopción</a></li>
         <li><a href="Donaciones.html">Donaciones</a></li>
         <li><a href="Ventas.html">Ventas</a></li>
-        <li><a href="Contactos.html">Contacto</a></li>
+        <li><a href="Contacto.html">Contacto</a></li>
         <li><a href="Mapa.html">Mapa</a></li>
       </ul>
     </section>
