intento de inseratar el mapa a html

--- a/Mapa.html
+++ b/Mapa.html
@@ -14,6 +14,6 @@
   document.addEventListener('DOMContentLoaded', initMap);
 </script>
       
-  <script src="https://maps.googleapis.com/maps/api/js?key=TU_CLAVE_DE_API"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs"></script>
 
 </head>
