errores del mapa y nuefa faseta de prueva comenzada, errores en el cambio de pestaña a "contactos correjidos

--- a/Mapa.html
+++ b/Mapa.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="stylesheet" href="./estilos.css">
   <script>
     function initMap() {
       // Crea un objeto de mapa y lo asigna al elemento <div> con el id "map"
