--- a/Adopcion.html
+++ b/Adopcion.html
@@ -26,12 +26,11 @@
             <div class='menu-button'></div>
         </label>
         <ul class="menu">
-            <li><a href="Adopcion.html">Adopcion!</a></li>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Adopcion.html">Adopción</a></li>
           <li><a href="Donaciones.html">Donaciones</a></li>
           <li><a href="Ventas.html">Ventas</a></li>
-          <li><a href="Contacto.html">Contacto</a></li>
+          <li><a href="Contactos.html">Contacto</a></li>
         </ul>
     </section>
     <br>
