--- a/Contacto.html
+++ b/Contacto.html
@@ -110,7 +110,37 @@
       });
     }
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs&callback=initMap"></script>
+ <!DOCTYPE html>
+<html>
+<head>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs&callback=initMap" async defer></script>
+  <script>
+    function initMap() {
+      // Verifica si el navegador soporta la Geolocalización
+      if (navigator.geolocation) {
+        // Obtiene la ubicación actual del usuario
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var latitude = position.coords.latitude;
+          var longitude = position.coords.longitude;
+          
+          // Crea un objeto de mapa y lo asigna al elemento <div> con el id "map"
+          var map = new google.maps.Map(document.getElementById('map-container'), {
+            center: { lat: latitude, lng: longitude },
+            zoom: 8
+          });
+        });
+      } else {
+        alert('Tu navegador no soporta la Geolocalización.');
+      }
+    }
+  </script>
+</head>
+<body>
+  <div id="map-container" style="width: 100%; height: 400px;"></div>
+</body>
+</html>
+
+  
 </body>
 
 </html>
