--- a/Contacto.html
+++ b/Contacto.html
@@ -111,36 +111,39 @@
     }
   </script>
  <!DOCTYPE html>
-<html>
-<head>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs&callback=initMap" async defer></script>
-  <script>
-    function initMap() {
-      // Verifica si el navegador soporta la Geolocalización
-      if (navigator.geolocation) {
-        // Obtiene la ubicación actual del usuario
-        navigator.geolocation.getCurrentPosition(function(position) {
-          var latitude = position.coords.latitude;
-          var longitude = position.coords.longitude;
-          
-          // Crea un objeto de mapa y lo asigna al elemento <div> con el id "map"
-          var map = new google.maps.Map(document.getElementById('map-container'), {
-            center: { lat: latitude, lng: longitude },
-            zoom: 8
-          });
-        });
-      } else {
-        alert('Tu navegador no soporta la Geolocalización.');
-      }
-    }
-  </script>
-</head>
-<body>
-  <div id="map-container" style="width: 100%; height: 400px;"></div>
-</body>
-</html>
+ <html>
+ <head>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs&callback=initMap" async defer></script>
+   <script>
+     function initMap() {
+       // Verifica si el navegador soporta la Geolocalización
+       if (navigator.geolocation) {
+         // Obtiene la ubicación actual del usuario
+         navigator.geolocation.getCurrentPosition(function(position) {
+           var latitude = position.coords.latitude;
+           var longitude = position.coords.longitude;
+           
+           // Crea un objeto de mapa y lo asigna al elemento <div> con el id "map"
+           var map = new google.maps.Map(document.getElementById('map-container'), {
+             center: { lat: latitude, lng: longitude },
+             zoom: 8
+           });
+ 
+           // Crea un marcador en la ubicación actual
+           var marker = new google.maps.Marker({
+             position: { lat: latitude, lng: longitude },
+             map: map,
+             title: '¡Estoy aquí!'
+           });
+         });
+       } else {
+         alert('Tu navegador no soporta la Geolocalización.');
+       }
+     }
+   </script>
+ </head>
+ <body>
+   <div id="map-container" style="width: 100%; height: 400px;"></div>
+ </body>
 
-  
-</body>
-
-</html>
+ </html>
