--- a/Donaciones.html
+++ b/Donaciones.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header>
     <section class="top-nav">
-      <img src="file:///C:/Users/ThinkPad/OneDrive/Im%C3%A1genes/Logo%20para%20adopciones.png" width="80" height="80" alt="img">
+      <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">
       <input id="menu-toggle" type="checkbox" />
       <label class="menu-button-container" for="menu-toggle">
         <div class="menu-button"></div>
