--- a/Contacto.html
+++ b/Contacto.html
@@ -71,7 +71,7 @@
       };
 
       // Realiza una solicitud POST utilizando fetch() y configura los encabezados adecuados
-      fetch('https://localhost:7235/api/Contact', {
+      fetch('http://localhost:8083/api/Contact', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -113,7 +113,7 @@
  <!DOCTYPE html>
  <html>
  <head>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJ1SImObo0JFwq_JlRrDoazvyKe_ifEs&callback=initMap" async defer></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap" async defer></script>
    <script>
      function initMap() {
        // Verifica si el navegador soporta la Geolocalización
