--- a/Donaciones.html
+++ b/Donaciones.html
@@ -50,7 +50,7 @@
       </div>
       <div class="input-container">
         <label for="tarjeta">Número de tarjeta</label>
-        <input type="number" minlength="12" maxlength="12" name="tarjeta" id="tarjeta" class="input-field">
+        <input type="text" pattern="\d*" minlength="12" name="tarjeta" id="tarjeta" class="input-field">
       </div>
       <br>
       <br>
@@ -100,12 +100,12 @@
         });
     });
   </script>
+
   <footer>
     <p>&copy;Supervisor del curso: Raul Galvan</p>
     <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
     <p>Bakend: Damariz, Andrea y Marcia</p>
   </footer> ​
-
 </body>
 
 </html>
