--- a/Donaciones.html
+++ b/Donaciones.html
@@ -77,7 +77,7 @@
       };
 
       // Realiza una solicitud POST utilizando fetch() y configura los encabezados adecuados
-      fetch('http://localhost:8083/api/Donation', {
+      fetch('http://localhost:7235/api/Donation', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
@@ -87,19 +87,18 @@
         .then(function (response) {
           // Maneja la respuesta del servidor
           if (response.ok) {
-            console.log('Solicitud enviada exitosamente');
-            // Realiza alguna acción adicional después de que se envía el formulario
+            alert("Gracias por tu donativo!");
+            document.location.reload();
           } else {
             console.log('Error al enviar la solicitud');
             // Maneja el error de la solicitud
           }
         })
         .catch(function (error) {
-          console.log('Error de red:', error);
-          // Maneja el error de red
-        }).finally(function () {
-          alert("Gracias por tu donativo!");
+          alert("Algun error ha ocurrido favor de contactar al departamento de sistemas");
           document.location.reload();
+        }).finally(function () {
+
         });
     });
   </script>
