--- a/Adopcion.html
+++ b/Adopcion.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
 <script>
   function redireccionar() {
-      window.location.href = "Contactos.html";
+      window.location.href = "Contacto.html";
   }
 </script>
 </head>
