--- a/Ventas.html
+++ b/Ventas.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="./estilos.css">
   <link rel="stylesheet" href="./menu.css">
   <link rel="stylesheet" href="./Ventas.css">
+  <script>
+    function redireccionar() {
+        window.location.href = "Pago.html";
+    }
+  </script>
  
   <title>De Vuelta a Casa</title>
 </head>
@@ -39,7 +44,7 @@
             <img src="Assets/galleta1.jpg" width="100px" height="100px" alt="galleta">
             <h2>GALLETAS ARTESANALES PARA PERROS</h2>
             <h2>$150</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -49,7 +54,7 @@
             <img src="Assets/juguetes.jpg" width="60px" height="50px" alt="juguetes">
             <h2>JUGUETES PARA PERROS Y GATOS</h2>
             <h2>$200</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -59,7 +64,7 @@
             <img src="Assets/peluche personalizado de tu mascota.jpg" width="60px" height="100px" alt="peluche">
             <h2>PELUCHE PERSONALIZADO DE TU MASCOTA</h2>
             <h2>$500</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -69,7 +74,7 @@
             <img src="Assets/collares de colores.jpg" width="60px" height="100px" alt="collares de colores">
             <h2>COLLAR DE COLORES PARA MASCOTA</h2>
             <h2>$300</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -79,7 +84,7 @@
             <img src="Assets/collar cafe para mascota.jpg" width="70px" height="50px" alt="collares cafes">
             <h2>COLLAR CAFE PARA MASCOTAS</h2>
             <h2>$300</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -89,7 +94,7 @@
             <img src="Assets/sueter azul.jpg" width="70px" height="50px" alt="sueter azul">
             <h2>SUETER PARA MASCOTAS COLOR AZUL</h2>
             <h2>$400</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -99,7 +104,7 @@
             <img src="Assets/plato para comer lento espiral.jpg" width="70px" height="50px" alt="plato para comer lento espiral">
             <h2>PLATO PATA COMER LENTO (ESPIRAL)</h2>
             <h2>$200</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"type="submit" class ="buy-button">Comprar</button>
           </div>
         </div>
       </div>
