Pago y algunos otros arreglos(paso en lo que reparo el footer)

--- a/Adopcion.html
+++ b/Adopcion.html
@@ -98,7 +98,7 @@
           sexo:Macho
           <br>
           <br>
-          <center><button onclick="redireccionar()"type="submit">Contactar</button></center>
+          <center><button onclick="redireccionar()"type="submit" class="button-bottom">Contactar</button></center>
         </h3>
       </div>
     </div>
@@ -163,6 +163,16 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer>
   <p>&copy;Supervisor del curso: Raul Galvan</p>
   <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
