--- a/Adopcion.html
+++ b/Adopcion.html
@@ -165,8 +165,8 @@
 </body>
 
 <footer>
-  <p>&copy;Supervisor del curso: Raul Galvan</p>
-  <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
-  <p>Bakend: Damariz, Andrea y Marcia</p>
+  <h1>&copy;Supervisor del curso: Raul Galvan</h1>
+  <h1>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</h1>
+  <h1>Bakend: Damariz, Andrea y Marcia</h1>
 </footer>
 </html>
