--- a/Adopcion.html
+++ b/Adopcion.html
@@ -73,7 +73,7 @@
   <!-- Diapositivas -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="file:///C:/Users/kichu/Downloads/pug.jpg" alt="Image 1">
+      <img src="Assets/pug.jpg" alt="Image 1">
       <div class="carousel-caption">
         <h3>Maria
           <br>
