se reparo el menu cuando este se pone en modo responsivo

--- a/Contacto.html
+++ b/Contacto.html
@@ -24,8 +24,8 @@
   <section class="top-nav">
     <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">
     <input id="menu-toggle" type="checkbox" />
-    <label class='menu-button-container' for="menu-toggle">
-      <div class='menu-button'></div>
+    <label class="menu-button-container" for="menu-toggle" style="z-index: 10000 !important;">
+      <div class="menu-button"></div>
     </label>
     <ul class="menu">
       <li><a href="index.html">Inicio</a></li>
