--- a/Ventas.html
+++ b/Ventas.html
@@ -15,7 +15,7 @@
     <section class="top-nav">
       <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">
       <input id="menu-toggle" type="checkbox" />
-      <label class="menu-button-container" for="menu-toggle">
+      <label class="menu-button-container" for="menu-toggle" style="z-index: 10000 !important;">
         <div class="menu-button"></div>
       </label>
       <ul class="menu">
