solucion de footer

--- a/Adopcion.html
+++ b/Adopcion.html
@@ -39,7 +39,7 @@
     <br>
     <br>
     <!-- End Header -->
-<center><p>¡Bienvenido a adopciones!</p></center>
+<center><p class="title">¡Bienvenido a adopciones!</p></center>
 <center><h1>Selecciona al canino que quieras adoptar para que sea tu nuevo amigo</h1></center>
     <!DOCTYPE html>
 <html>
@@ -98,7 +98,7 @@
           sexo:Macho
           <br>
           <br>
-          <center><button onclick="redireccionar()"type="submit">Contactar</button></center>
+          <center> <button onclick="redireccionar()"type="submit">Contactar</button></center>
         </h3>
       </div>
     </div>
@@ -165,8 +165,8 @@
 </body>
 
 <footer>
-  <h1>&copy;Supervisor del curso: Raul Galvan</h1>
-  <h1>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</h1>
-  <h1>Bakend: Damariz, Andrea y Marcia</h1>
+  <p>&copy;Supervisor del curso: Raul Galvan</p>
+  <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
+  <p>Bakend: Damariz, Andrea y Marcia</p>
 </footer>
 </html>
