ya se puede agrandar el boton de "Donaciones"

--- a/Donaciones.html
+++ b/Donaciones.html
@@ -55,7 +55,7 @@
       </div>
       <br>
       <br>
-      <input type="submit" id="submit-btn" value="Donar!">
+      <input type="submit" id="submit-btn" value="Donar!" class="btn-donar">
     </form>
   </div>
 
