Ya se puede hacer scroll down

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <link rel="stylesheet" href="index.css">
    <!-- Projects Section -->
    <style>
+    body {
+      overflow-y: auto;
+    }
+  </style>
+  
+   <style>
     #projects {
       display: flex;
       flex-direction: column;
@@ -221,6 +227,24 @@
                 hogar feliz.</p>
             </div>
           </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
       </div>
     </div>
@@ -232,12 +256,12 @@
    <br>
   <!-- End Projects Section -->
   <script src="index.js"></script>
+  <footer>
+    <p>&copy;Supervisor del curso: Raul Galvan</p>
+    <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
+    <p>Bakend: Damariz, Andrea y Marcia</p>
+  </footer>
 </body>
 
-<footer>
-  <p>&copy;Supervisor del curso: Raul Galvan</p>
-  <p>Frontend: Leonardo, Nicolas, Jose, Emiliano, Damariz, Keara y Adrian</p>
-  <p>Bakend: Damariz, Andrea y Marcia</p>
-</footer>
 
 </html>
