Pagina de pagos

--- a/Ventas.html
+++ b/Ventas.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="./estilos.css">
   <link rel="stylesheet" href="./menu.css">
   <link rel="stylesheet" href="./Ventas.css">
+  <script>
+    function redireccionar() {
+        window.location.href = "Pagos.html"; 
+    }
+</script>
  
   <title>De Vuelta a Casa</title>
 </head>
@@ -38,7 +43,7 @@
             <img src="Assets/galleta1.jpg" width="100px" height="100px" alt="galleta">
             <h2>GALLETAS ARTESANALES PARA PERROS</h2>
             <h2>$150</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -48,7 +53,7 @@
             <img src="Assets/juguetes.jpg" width="60px" height="50px" alt="juguetes">
             <h2>JUGUETES PARA PERROS Y GATOS</h2>
             <h2>$200</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -58,7 +63,7 @@
             <img src="Assets/peluche personalizado de tu mascota.jpg" width="60px" height="100px" alt="peluche">
             <h2>PELUCHE PERSONALIZADO DE TU MASCOTA</h2>
             <h2>$500</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
