los botones de ventas ya funcionan

--- a/Ventas.html
+++ b/Ventas.html
@@ -73,7 +73,7 @@
             <img src="Assets/collares de colores.jpg" width="60px" height="100px" alt="collares de colores">
             <h2>COLLAR DE COLORES PARA MASCOTA</h2>
             <h2>$300</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
             <img src="Assets/collar cafe para mascota.jpg" width="70px" height="50px" alt="collares cafes">
             <h2>COLLAR CAFE PARA MASCOTAS</h2>
             <h2>$300</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -93,7 +93,7 @@
             <img src="Assets/sueter azul.jpg" width="70px" height="50px" alt="sueter azul">
             <h2>SUETER PARA MASCOTAS COLOR AZUL</h2>
             <h2>$400</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
             <img src="Assets/plato para comer lento espiral.jpg" width="70px" height="50px" alt="plato para comer lento espiral">
             <h2>PLATO PATA COMER LENTO (ESPIRAL)</h2>
             <h2>$200</h2>
-            <button class="buy-button">Comprar</button>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
           </div>
         </div>
       </div>
@@ -111,7 +111,24 @@
     </div>
   </section>
   <!-- End Projects Section -->
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <!-- Scripts -->
   <script src="app.js"></script>
 </body>
