Se arreglo el modo responsivo en el carrousel y la letra tambien

--- a/Adopcion.html
+++ b/Adopcion.html
@@ -48,15 +48,15 @@
   <style>
     /* Estilo personalizado para el carrusel */
     #myCarousel {
-      width: 800px; /* Ancho del carrusel */
-      height: 400px; /* Altura del carrusel */
+      max-width: 80%; /* Ajustar el carrusel al ancho máximo disponible */
+      height: 80%; /* Ajustar la altura automáticamente */
       margin: 0 auto; /* Centrar el carrusel horizontalmente */
     }
     .carousel-item img {
-      width: 50%; /* Ajustar las imágenes al 100% del ancho del carrusel */
-      height: 100%; /* Ajustar las imágenes al 100% de la altura del carrusel */
+      max-width: 50%; /* Ajustar las imágenes al ancho máximo del carrusel */
+      height: 100%; /* Ajustar la altura automáticamente */
     }
-  </style>
+  </style>  
 </head>
 <body>
 
@@ -161,7 +161,17 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 
 <footer>
